Update Robolectric to 4.17 and test native backdrop rendering